--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -5,7 +5,7 @@ development:
     default:
       # Defines the name of the default database that Mongoid can connect to.
       # (required).
-      database: dog_api_development
+      database: rails_api_development
       # Provides the hosts the default client can connect to. Must be an array
       # of host:port pairs. (required)
       hosts:
@@ -155,7 +155,7 @@ development:
 test:
   clients:
     default:
-      database: dog_api_test
+      database: rails_api_test
       hosts:
         - localhost:27017
       options:
